--- a/package.json
+++ b/package.json
@@ -1,15 +1,26 @@
 {
-  "name": "webpack",
+  "name": "webpackconf",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "webpack.config.js",
   "dependencies": {},
-  "devDependencies": {},
+  "devDependencies": {
+    "webpack": "^4.29.0",
+    "webpack-cli": "^3.2.1"
+  },
   "scripts": {
     "start": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Allucard79/webpackConf.git"
+  },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Allucard79/webpackConf/issues"
+  },
+  "homepage": "https://github.com/Allucard79/webpackConf#readme"
 }
